--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -15,6 +15,10 @@
     },
     "bio": {
       "type": "richtext"
+    },
+    "poem": {
+      "via": "author",
+      "model": "poem"
     }
   }
 }
