--- a/api/poem/models/poem.settings.json
+++ b/api/poem/models/poem.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "poem",
   "info": {
-    "name": "poem"
+    "name": "poem",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -12,6 +13,10 @@
   "attributes": {
     "content": {
       "type": "richtext"
+    },
+    "author": {
+      "model": "author",
+      "via": "poem"
     }
   }
 }
