--- a/api/author/models/author.settings.json
+++ b/api/author/models/author.settings.json
@@ -16,9 +16,9 @@
     "bio": {
       "type": "richtext"
     },
-    "poem": {
+    "poems": {
       "via": "author",
-      "model": "poem"
+      "collection": "poem"
     }
   }
 }
