--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "strapi start",
     "build": "strapi build",
     "strapi": "strapi",
-    "deploy": "git push heroku HEAD:main"
+    "deploy": "git push heroku HEAD:main",
+    "gen": "strapi generate:model flickr-photos isDarkBg:boolean photoURL:string name:string flickrId:string --plugin flickr-photos"
   },
   "dependencies": {
     "@sentry/node": "^6.2.3",
