--- a/plugins/flickr-photos/models/flickr-photos.settings.json
+++ b/plugins/flickr-photos/models/flickr-photos.settings.json
@@ -1,6 +1,6 @@
 {
   "kind": "collectionType",
-  "collectionName": "flickr_photos",
+  "collectionName": "flickr-photos",
   "info": {
     "name": "flickr-photos"
   },
